# linux-c2rust-pipeline

./: Cargo.toml  README.md
.github/: PR_TEMPLATE_CONVERT.md
.github/workflows/: 01-convert.yml  02-security.yml  03-compat.yml  04-build-test.yml
config/: clippy.toml  expected_rust_symbols.txt  kunit.kunitconfig
crates/linux_rust_bindings/: Cargo.toml
crates/linux_rust_bindings/src/: lib.rs
crates/linux_rust_generated/: Cargo.toml
crates/linux_rust_generated/src/: lib.rs  nintendo_otp.rs
crates/linux_rust_safe/: Cargo.toml
crates/linux_rust_safe/src/: lib.rs
scripts/: abi_diff.py  boot_test_payload.sh  build_initramfs.sh  check_safety_docs.py  evaluate_pipeline.py  format_audit.py  gen_bindings.sh  gen_compile_commands.sh  gen_report.py  idiomize.sh  inject_modules.sh  parse_geiger.py  parse_ktap.py  patch_compile_db.py  run_kselftest_qemu.sh  security_policy.sh  validate_boot_log.py  verify_rust_symbols.py
src/c/: nintendo-otp.c  security.c
tests/kunit/: rust_converted_test.rs
